cmake_minimum_required(VERSION 3.24)
project(For_Trying)

set(CMAKE_CXX_STANDARD 17)

add_executable(For_Trying main.cpp LinkedList.cpp LinkedList.h Array.cpp Array.h Array.cpp Array.cpp Stack.cpp Stack.h StackArray.cpp StackArray.h ArrayQueue.cpp ArrayQueue.h HashTable.cpp HashTable.h Tree.cpp Tree.h AVLTree.cpp AVLTree.h Heap.cpp Heap.h Heap.cpp Tree.cpp Tree.h Trie.cpp Trie.h)
